--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,17 +38,43 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen=inventors.filter(function(inventor){
+      if(inventor.year >= 1500 && inventor.year < 1600){
+        return true;
+      }
+    });
+    console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const fullname=inventors.map(inventors => `${inventors.first} ${inventors.last}`);
+    console.log(fullname);
+ 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const prob2= inventors.sort((fper, secper)=> fper.year>secper.year ?1 :-1) 
+    console.table(prob2)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const total = inventors.reduce((total, inventors)=>{
+      return total+(inventors.passed-inventors.year)
+
+    },0);
+    console.log(total);
 
     // 5. Sort the inventors by years lived
+    const oldest =inventors.sort(function(a,b){
+      const lastguy = a.passed-a.year;
+      const nextguy = b.passed-b.year;
+
+      return ((lastguy>nextguy) ? -1: 1);
+      // if(lastguy>nextguy){
+      //   return -1;
+      // }else{
+      //   return 1;
+      // }
+    })
+    console.table(oldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -57,10 +83,27 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+    const we = people.sort(function(a,b){
+      const [alast,afirst] = a.split(', ');
+      // console.log(a);
+      const [blast,bfirst] = b.split(', ');
+      return alast > blast ? 1: -1;
+    });
+    console.log(we)
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const transportation = data.reduce( function(obj,items){
+      if(!obj[items]){
+        obj[items]=0;
+      }
+      obj[items]++;
+      return obj;
+    },{})
+    console.table(transportation)
   </script>
 </body>
 </html>
